@@ -1,5 +1,11 @@
 # $Id$
 
+2006-03-15
+        * Removed bmp-infopipe dependency from 1.4.1 and 1.9999 ebuilds for Gentoo 
+	(Gentoo bug# 125226).
+        * Fixed subversion ebuild for conky1 (1.9999) so it pulls the new trunk
+	path for conky1.
+
 2006-03-12
 	* FreeBSD cpu info patch
 	* Conky 1.4.1 released
